# ai-coding-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  mise.toml
backend/: .env.example  Cargo.toml  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/server/: router.go  router_test.go
backend/src/: config.rs  main.rs  state.rs
backend/src/entity/: mod.rs  todo.rs
backend/src/migration/: m20250101_000001_create_todos.rs  mod.rs
backend/src/routes/: health.rs  mod.rs  todo.rs
backend/tests/: health_test.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: main.tsx  style.css
