[package]
name = "backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
sea-orm-migration = "1.1"

redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
once_cell = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
